# cl-raytracer

./: .hgignore  CMakeLists.txt
lib/OCL-Library/: ocl.cpp  ocl.h
src/: Buffer.h  GPURayTracer.cpp  GPURayTracer.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  Screen.h  ShaderFuncs.h  main.cpp  raytrace.cl
